--- a/mailPilot-v11/index.html
+++ b/mailPilot-v11/index.html
@@ -37,7 +37,7 @@
     <script src="Scripts/lib/preloadjs-0.4.1.min.js"></script>
     <script src="Scripts/constants.js"></script>
     <script src="Scripts/managers/asset.js"></script>
-    <script src="Scripts/objects/cloud.js"></script>
+    <script src="Scripts/objects/planets.js"></script>
     <script src="Scripts/objects/island.js"></script>
     <script src="Scripts/objects/ocean.js"></script>
     <script src="Scripts/objects/plane.js"></script>
@@ -45,18 +45,22 @@
     <script src="Scripts/objects/button.js"></script>
     <script src="Scripts/objects/label.js"></script>
     <script src="Scripts/objects/bullet.js"></script>
-    <script src="Scripts/objects/boss.js"></script>
     <script src="Scripts/objects/superBullet.js"></script>
     <script src="Scripts/objects/BossScoreboard.js"></script>
     <script src="Scripts/objects/poo.js"></script>
 
-    <script src="Scripts/states/bossStage.js"></script>
     <script src="Scripts/managers/collision.js"></script>
     <script src="Scripts/managers/bulletCollision.js"></script>
     <script src="Scripts/managers/bulletBossCollision.js"></script>
     <script src="Scripts/managers/bossCollision.js"></script>
-    <script src="Scripts/states/menu.js"></script>
-    <script src="Scripts/states/play.js"></script>
+
+    <script src="Scripts/states/menu_home.js"></script>
+    <script src="Scripts/states/menu_level1.js"></script>
+    <script src="Scripts/states/menu_level2.js"></script>
+    <script src="Scripts/states/menu_level3.js"></script>
+    <script src="Scripts/states/play_level1.js"></script>
+    <script src="Scripts/states/play_level2.js"></script>
+    <script src="Scripts/states/play_level3.js"></script>
     <script src="Scripts/states/gameover.js"></script>
     <script src="Scripts/states/instruction.js"></script>
     <script src="Scripts/states/win.js"></script>
