--- a/mailPilot-v11/index.html
+++ b/mailPilot-v11/index.html
@@ -26,7 +26,7 @@
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
 </head>
-<body onload="preload()">
+<body onload="preload();">
     <canvas id="canvas" width="1200" height="540"></canvas>
 
     <!-- JavaScript Section -->
