Done devided stages for objects and bullets

--- a/mailPilot-v11/index.html
+++ b/mailPilot-v11/index.html
@@ -38,31 +38,41 @@
     <script src="Scripts/constants.js"></script>
     <script src="Scripts/managers/asset.js"></script>
 
-    <script src="Scripts/objects/island.js"></script>
     <script src="Scripts/objects/ocean.js"></script>
 
+    <script src="Scripts/objects/Level1/island.js"></script>
     <script src="Scripts/objects/Level1/plane.js"></script>
     <script src="Scripts/objects/Level1/planets.js"></script>
     <script src="Scripts/objects/Level1/scoreboard.js"></script>
 
+    <script src="Scripts/objects/Level2/island.js"></script>
     <script src="Scripts/objects/Level2/plane.js"></script>
     <script src="Scripts/objects/Level2/planets.js"></script>
     <script src="Scripts/objects/Level2/scoreboard.js"></script>
+    <script src="Scripts/objects/Level2/bullet_L2.js"></script>
 
+    <script src="Scripts/objects/Level3/island.js"></script>
     <script src="Scripts/objects/Level3/plane.js"></script>
     <script src="Scripts/objects/Level3/planets.js"></script>
     <script src="Scripts/objects/Level3/scoreboard.js"></script>
+    <script src="Scripts/objects/Level3/bullet_L3.js"></script>
 
+    <script src="Scripts/objects/boss.js"></script>
  
     <script src="Scripts/objects/button.js"></script>
     <script src="Scripts/objects/label.js"></script>
-    <script src="Scripts/objects/bullet.js"></script>
+
     <script src="Scripts/objects/superBullet.js"></script>
-    <script src="Scripts/objects/BossScoreboard.js"></script>
+
     <script src="Scripts/objects/poo.js"></script>
 
     <script src="Scripts/managers/collision.js"></script>
-    <script src="Scripts/managers/bulletCollision.js"></script>
+    <script src="Scripts/managers/collision_L2.js"></script>
+    <script src="Scripts/managers/collision_L3.js"></script>
+
+    <script src="Scripts/managers/bulletCollision_L2.js"></script>
+    <script src="Scripts/managers/bulletCollision_L3.js"></script>
+
     <script src="Scripts/managers/bulletBossCollision.js"></script>
     <script src="Scripts/managers/bossCollision.js"></script>
 
