--- a/mailPilot-v11/index.html
+++ b/mailPilot-v11/index.html
@@ -20,7 +20,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Adventure Time</title>
+    <title>Space War Z</title>
     <!-- CSS Section -->
     <link href='http://fonts.googleapis.com/css?family=Maven+Pro:500,900,700' rel='stylesheet' type='text/css'>
     <link href="css/normalize.css" rel="stylesheet" />
@@ -57,6 +57,9 @@
     <script src="Scripts/objects/Level3/scoreboard.js"></script>
     <script src="Scripts/objects/Level3/bullet_L3.js"></script>
 
+    <script src="Scripts/objects/Boss/scoreboard.js"></script>
+
+
     <script src="Scripts/objects/boss.js"></script>
  
     <script src="Scripts/objects/button.js"></script>
@@ -83,10 +86,11 @@
     <script src="Scripts/states/play_level1.js"></script>
     <script src="Scripts/states/play_level2.js"></script>
     <script src="Scripts/states/play_level3.js"></script>
+    <script src="Scripts/states/play_boss.js"></script>
+
     <script src="Scripts/states/gameover.js"></script>
     <script src="Scripts/states/instruction.js"></script>
     <script src="Scripts/states/win.js"></script>
-
     <script src="Scripts/game.js"></script>
     <script src="Scripts/keys.js"></script>
     <script src="Scripts/controls.js"></script>
